tunnel/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunnel
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tunnel
  template:
    metadata:
      labels:
        app: tunnel
        app.kubernetes.io/version: v1
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: server
          image: ghcr.io/noeulnight/hole-api:latest
          ports:
            - containerPort: 3000
            - containerPort: 22

          volumeMounts:
            - mountPath: /data
              name: tunnel-storage
      volumes:
        - name: tunnel-storage
          persistentVolumeClaim:
            claimName: tunnel-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunnel-web
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tunnel-web
  template:
    metadata:
      labels:
        app: tunnel-web
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: server
          image: ghcr.io/noeulnight/hole-web:latest
          ports:
            - containerPort: 80
