tunnel/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tunnel-service
spec:
  selector:
    app: tunnel
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
