tunnel/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tunnel
spec:
  hosts:
    - "tunnel.lth.so"
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - uri:
            regex: /api(/|$)(.*)
      rewrite:
        uriRegexRewrite:
          match: ^/api(/|$)(.*)
          rewrite: "/\\2"
      route:
        - destination:
            host: tunnel-service.tunnel.svc.cluster.local
            port:
              number: 3000
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: tunnel-web-service.tunnel.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tunnel-target
spec:
  hosts:
    - "*.tunnel.lth.so"
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: tunnel-service.tunnel.svc.cluster.local
            port:
              number: 3000
